--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <script src="shevchenko.js"></script>
-    <link rel="stylesheet" href="shevchenko.css" />
+    <script src="app.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Біографія Тараса Шевченка</title>
     <style>
       body {
