--- a/index.html
+++ b/index.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <script src="app.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <script src="ap.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Біографія Тараса Шевченка</title>
-    <style>
-      body {
-        background: rgb(255, 239, 0);
-        background: linear-gradient(
-          0deg,
-          rgba(255, 239, 0, 1) 50%,
-          rgba(72, 45, 253, 1) 50%
-        );
-        color: rgb(59, 59, 59);
-      }
-    </style>
   </head>
   <body>
-    <h1 align="center" style="color: rgb(61, 0, 0)">
-      Тарас Григорович Шевченко
-    </h1>
-    <a
-      href="https://life.pravda.com.ua/images/doc/f/8/f808ec1-1200px-taras-shevchenko-painting-0028.jpg"
-      target="_blank"
-    >
+    <h1 align="center" style="color: black">Тарас Григорович Шевченко</h1>
       <img
         class="image"
-        src="https://life.pravda.com.ua/images/doc/f/8/f808ec1-1200px-taras-shevchenko-painting-0028.jpg"
-        width="350"
-        height="250"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Taras_Shevchenko_selfportrait_oil_1840_%28crop%29.png/1200px-Taras_Shevchenko_selfportrait_oil_1840_%28crop%29.png"
         alt="Портрет"
     /></a>
     <div class="text5">
-      <p style="color: rgb(125, 0, 0)"><strong>Ким він був:</strong></p>
+      <p style="color: rgb(50, 50, 50);"><strong>Ким він був:</strong></p>
       <ul>
         <li>Поет</li>
         <li>Художник</li>
@@ -98,10 +85,10 @@
     <a
       href="https://uk.wikipedia.org/wiki/%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%BE_%D0%A2%D0%B0%D1%80%D0%B0%D1%81_%D0%93%D1%80%D0%B8%D0%B3%D0%BE%D1%80%D0%BE%D0%B2%D0%B8%D1%87"
       target="_blank"
-      >Wikipedia (Вікіпедія)</a
+      >Wikipedia</a
     >
     <div class="text0">
-      <p style="color: rgb(125, 0, 0)"><strong>Відомі поезії:</strong></p>
+      <p style="color: rgb(50, 50, 50)"><strong>Відомі поезії:</strong></p>
       <ol>
         <li>
           <a
@@ -126,11 +113,12 @@
         </li>
       </ol>
     </div>
-    <h3 class="text6" style="color: rgb(125, 0, 0)">
+    <h3 class="text6" style="color: rgb(50, 50, 50)">
       Також можете переглянути цікаве відео про нього та подивитися на його
       картини:
     </h3>
     <iframe
+    class="video"
       width="560"
       height="315"
       src="https://www.youtube-nocookie.com/embed/VVFEi6lTpZk?controls=0"
@@ -151,5 +139,6 @@
       height="300px"
       alt=""
     />
+      <h4>Розробник: diloviy (Telegram), couchytry (Instagram)</h4>
   </body>
 </html>
