--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-    <script src="ap.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Біографія Тараса Шевченка</title>
   </head>
@@ -139,6 +139,6 @@
       height="300px"
       alt=""
     />
-      <h4>Розробник: diloviy (Telegram), couchytry (Instagram)</h4>
+  <snap onclick="AboutMe">Розробник</span>
   </body>
 </html>
