--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
       height="300px"
       alt=""
     />
-  <snap onclick="AboutMe">Розробник</span>
+    <div class="developer">
+    <span onclick="AboutMe()">Розробник</span>
+    </div>
   </body>
 </html>
