--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       height="300px"
       alt=""
     />
+    <img class="image3" src="http://museum.net.ua/images/hudogniki_ukraine/Izgakevich/21.jpg" alt="">
     <div class="developer">
     <span onclick="AboutMe()">Розробник</span>
     </div>
