--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
     <img
       class="image2"
       src="https://upload.wikimedia.org/wikipedia/commons/6/6d/%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%BE_%D0%A2._%D0%93._%D0%9A%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0._1842.jpg"
-      height="300px"
+      height="300px"  
       alt=""
     />
     <img class="image3" src="http://museum.net.ua/images/hudogniki_ukraine/Izgakevich/21.jpg" alt="">
     <div class="developer">
-    <span onclick="AboutMe()">Розробник</span>
+    <button type = "button" class = "button1" style="width: 100px; height: 30px; text-align: center;" onclick="AboutMe()"><strong>Розробник</strong></button>
     </div>
   </body>
 </html>
