--- a/index.html
+++ b/index.html
@@ -82,11 +82,9 @@
         >
       </p>
     </div>
-    <a
-      href="https://uk.wikipedia.org/wiki/%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%BE_%D0%A2%D0%B0%D1%80%D0%B0%D1%81_%D0%93%D1%80%D0%B8%D0%B3%D0%BE%D1%80%D0%BE%D0%B2%D0%B8%D1%87"
-      target="_blank"
-      >Wikipedia</a
-    >
+    <div class="wikipedia">
+      <button type = "button" class="button2" onClick='location.href="https://uk.wikipedia.org/wiki/%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%BE_%D0%A2%D0%B0%D1%80%D0%B0%D1%81_%D0%93%D1%80%D0%B8%D0%B3%D0%BE%D1%80%D0%BE%D0%B2%D0%B8%D1%87"' style="width: 100px; height: 30px; text-align: center;"><strong>Wikipedia</strong></button>
+      </div>
     <div class="text0">
       <p style="color: rgb(50, 50, 50)"><strong>Відомі поезії:</strong></p>
       <ol>
