--- a/index.html
+++ b/index.html
@@ -122,19 +122,21 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
+    <div class="images">
     <img
       class="image1"
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Shevch_muzej2..jpg/520px-Shevch_muzej2..jpg"
       height="300px"
-      alt=""
+      alt="image1"
     />
     <img
       class="image2"
       src="https://upload.wikimedia.org/wikipedia/commons/6/6d/%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%BE_%D0%A2._%D0%93._%D0%9A%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0._1842.jpg"
       height="300px"  
-      alt=""
+      alt="image2"
     />
-    <img class="image3" src="http://museum.net.ua/images/hudogniki_ukraine/Izgakevich/21.jpg" alt="">
+    <img class="image3" src="http://museum.net.ua/images/hudogniki_ukraine/Izgakevich/21.jpg" alt="image3">
+    </div>
     <div class="developer">
     <button type = "button" class = "button1" style="width: 100px; height: 30px; text-align: center;" onclick="AboutMe()"><strong>Розробник</strong></button>
     </div>
