--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 }
 
 ::-webkit-scrollbar-track {
-    background: grey;
+    background: orange;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #58197e;
+    background: blue;
 }
 
 ::-webkit-scrollbar-thumb:hover {
