--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="/home/andrew/Зображення/Знімки екрана/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVVLRcPx6xthoLWnTSW4URoXvlocl3d5i3SA&usqp=CAU" type="image/x-icon">
     <script src="app.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Тарас Шевченко</title>
