--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 }
 
 ::-webkit-scrollbar-track {
-    background: blue;
+    background: #4a4cff;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: orange;
+    background: #ff9c00;
 }
 
 ::-webkit-scrollbar-thumb:hover {
