--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       height="300px"  
       alt="image2"
     />
-    <img class="image3" src="http://museum.net.ua/images/hudogniki_ukraine/Izgakevich/21.jpg" alt="image3">
+    <img class="image3" src="https://upload.wikimedia.org/wikipedia/commons/7/7a/%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%BE_%D0%A2._%D0%93._%281843%29_%D0%A1%D0%B5%D0%BB%D1%8F%D0%BD%D1%81%D1%8C%D0%BA%D0%B0_%D1%80%D0%BE%D0%B4%D0%B8%D0%BD%D0%B0.jpg" alt="image3">
     </div>
     <div class="developer">
     <button type = "button" class = "button1" style="width: 100px; height: 30px; text-align: center;" onclick="AboutMe()"><strong>Розробник</strong></button>
