--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </ul>
     </div>
     <div class="text1">
-      <p align="left">
+      <p align="center">
         <strong
           >Тара́с Григо́рович Шевче́нко, відомий також як Кобза́р (9
           березня) 1814, с. Моринці — (10
@@ -58,7 +58,7 @@
       </p>
     </div>
     <div class="text2">
-      <p align="right">
+      <p align="center">
         <strong
           >Тарас Шевченко у власній творчості відтворив саме ті думки й настрої,
           які були важливими в житті українців його часу. Про те, що його
@@ -75,20 +75,17 @@
       </p>
     </div>
     <div class="text3">
-      <p align="left">
+      <p align="center">
         <strong
-          >Він був сином мужика і став володарем у царстві духа. Він був
-          кріпаком і став велетнем у царстві людської культури. Він був самоуком
-          і вказав нові, свіжі й вільні шляхи професорам та книжним ученим.
-          Багатогранна творчість Шевченка була і залишається одним із головних
-          чинників формування національно-політичної свідомості українців. З
-          новою силою відчутний тепер її вплив на різні боки духовного життя
-          української нації.</strong
+          >Він був сином мужика і став володарем у царстві духа.<br> Він був
+          кріпаком і став велетнем у царстві людської культури.<br> Він був самоуком
+          і вказав нові, свіжі й вільні шляхи професорам та книжним ученим.<br>
+          </strong
         >
       </p>
     </div>
     <div class="text4">
-      <p align="right">
+      <p align="center">
         <strong
           >Шевченко був і глибоким ліриком, і творцем епічних поем, і видатним
           драматургом та різнобічно обдарованим митцем. Його літературна
